# MemCache

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  config.py  demo_agent.py  main.py
app/api/: deps.py  models.py  routes.py  services.py
app/db/: __init__.py  neo4j.py  postgres.py
app/services/: __init__.py  graph_extraction.py  neo4j_store.py  postgres_store.py  redis_store.py  retrieval.py  summarization.py
app/workers/: __init__.py  celery_app.py  tasks.py
scripts/: create-ivfflat-index.sql  init-postgres.sql
tests/: conftest.py  test_api.py  test_api_integration.py  test_celery_tasks.py  test_connections.py  test_demo_agent.py  test_graph_extraction.py  test_l1_redis.py  test_l1_redis_integration.py  test_l2_postgres.py  test_l3_neo4j.py  test_retrieval.py  test_scaffold.py  test_summarization.py
